fix overflow style of export list

--- a/src/options/style.css
+++ b/src/options/style.css
@@ -154,6 +154,7 @@ fieldset.title {
   display: block;
   width: 100%;
   height: 200px;
+  overflow-y: auto;
   white-space: normal;
   border: 1px solid gray;
 }
